<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable name="notificationHelper"
                  type="co.ghostnotes.sample.notification.NotificationHelper"/>

    </data>

    <android.support.constraint.ConstraintLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_medium"
            tools:context=".ui.main.MainFragment">

        <android.support.design.button.MaterialButton
                android:id="@+id/default_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/button_notification_default"
                android:onClick="@{ () -> notificationHelper.notifyDefault() }"/>

        <android.support.design.button.MaterialButton
                android:id="@+id/min_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/default_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/button_notification_min"
                android:onClick="@{ () -> notificationHelper.notifyMin() }"/>

        <android.support.design.button.MaterialButton
                android:id="@+id/low_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/min_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/button_notification_low"
                android:onClick="@{ () -> notificationHelper.notifyLow() }"/>

        <android.support.design.button.MaterialButton
                android:id="@+id/high_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/low_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/button_notification_high"
                android:onClick="@{ () -> notificationHelper.notifyHigh() }"/>

        <android.support.design.button.MaterialButton
                android:id="@+id/max_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/high_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/button_notification_max"
                android:onClick="@{ () -> notificationHelper.notifyMax() }"/>

        <TextView
                android:visibility="gone"
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message_fragment_main"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</layout>
